Build Angular Workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
      steps:  
        - uses: actions/checkout@v6.0.1
-       - name: Setup Node Js
+       - name: Setup Node JS
        - uses: actions/setup-node@v6.1.0
          with:
             node-version: 22.x
