--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,21 @@
-name: Build My Angular Build
-
 on:
   push: 
-     branches: [ main ]
+    branches: [ main ]
 
 jobs:
-   build-angular-app:
-     runs-on: ubuntu-latest
+  build-angular-app:
+    runs-on: ubuntu-latest
 
+    steps:  
+      - uses: actions/checkout@v6.0.1
+      
+      - name: Setup Node JS
+        uses: actions/setup-node@v6.1.0
+        with:
+          node-version: 22.x
 
-     steps:  
-       - uses: actions/checkout@v6.0.1
-       - name: Setup Node JS
-       - uses: actions/setup-node@v6.1.0
-         with:
-            node-version: 22.x
-       - name: Install Dependencies
-         run: npm install
-       - name: Build Angular App
-         run: npm run build
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build Angular App
+        run: npm run build
